@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static char libbk__rcsid[] = "$Id: b_signal.c,v 1.3 2001/11/28 18:24:09 seth Exp $";
+static char libbk__rcsid[] = "$Id: b_signal.c,v 1.4 2001/12/06 16:53:23 jtt Exp $";
 static char libbk__copyright[] = "Copyright (c) 2001";
 static char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -48,7 +48,6 @@ int bk_signal(bk_s B, int signo, bk_sighandler handler, bk_flags flags)
 {
   BK_ENTRY(B, __FUNCTION__,__FILE__,"libbk");
   struct sigaction new;
-  void *ret;
 
   memset(&new, 0, sizeof(new));
 
